@@ -82,8 +82,8 @@
   <string name="appearance_follow_system_description">Adopt device theme</string>
   <string name="appearance_white_text">Try to force white text</string>
   <string name="appearance_white_text_description">May affect readability</string>
-  <string name="appearance_random">Random wallpaper</string>
-  <string name="appearance_random_description">After each unlock</string>
+  <string name="appearance_random">Random wallpaper design</string>
+  <string name="appearance_random_description">Every time the display is turned off</string>
   <string name="appearance_colors">Extracted colors</string>
   <string name="appearance_colors_description">Used for calculating text contrast</string>
   <string name="appearance_colors_description_dynamic">Used by the system\'s theming engine</string>
